--- a/custom_components/scenery/manifest.json
+++ b/custom_components/scenery/manifest.json
@@ -3,7 +3,7 @@
   "name": "Scenery",
   "codeowners": ["@j9brown"],
   "config_flow": false,
-  "dependencies": [],
+  "dependencies": ["light"],
   "documentation": "https://github.com/j9brown/scenery/",
   "issue_tracker": "https://github.com/j9brown/scenery/issues",
   "integration_type": "helper",
